; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_junk.c_arena_ralloc_junk_large_intercept.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_junk.c_arena_ralloc_junk_large_intercept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@large_maxclass = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Unexpected old_usize\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"Unexpected usize\00", align 1
@most_recently_trimmed = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i64)* @arena_ralloc_junk_large_intercept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arena_ralloc_junk_large_intercept(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @arena_ralloc_junk_large_orig(i8* %7, i64 %8, i64 %9)
  %11 = load i64, i64* %5, align 8
  %12 = load i32, i32* @large_maxclass, align 4
  %13 = call i32 @assert_zu_eq(i64 %11, i32 %12, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %14 = load i64, i64* %6, align 8
  %15 = load i32, i32* @large_maxclass, align 4
  %16 = call i32 @shrink_size(i32 %15)
  %17 = call i32 @assert_zu_eq(i64 %14, i32 %16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i8*, i8** %4, align 8
  store i8* %18, i8** @most_recently_trimmed, align 8
  ret void
}

declare dso_local i32 @arena_ralloc_junk_large_orig(i8*, i64, i64) #1

declare dso_local i32 @assert_zu_eq(i64, i32, i8*) #1

declare dso_local i32 @shrink_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
